--- a/stile.css
+++ b/stile.css
@@ -121,8 +121,11 @@ a:hover {color: #1af3a4;}
 .cover--single h1 {font-size: 42px;}
 
 /*CARDS*/
-.cards {max-width: 1200px; margin: 40px auto;}
-.card {width: 30%; margin: 0 1.5%;background: #fff; float: left; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); transition: 0.3s; border-radius: 5px;}
+.cards {
+    max-width: 1600px;
+    margin: 40px auto;
+}
+.card {width: 22%; margin: 0 1.5%;background: #fff; float: left; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); transition: 0.3s; border-radius: 5px;}
 .card__image {width: 100%; height: auto;}
 .card__copy {padding: 5px 20px;}
 .card__copy h3 {margin-bottom: 0;}
@@ -143,8 +146,10 @@ a:hover {color: #1af3a4;}
     padding-left: 30px;}
 .banner__copy__text h3 {font-size: 36px; margin-bottom: 0;}
 .banner__copy__text h4 {font-size: 22px; margin: 5px 0;}
+.banner__autorizzazioni_partnership {background: #fff; height: auto; margin-top: 40px; padding: 10px; text-align: center; margin-bottom: 30px;}
 .banner__autorizzazioni {background: #fff; height: auto; margin-top: 40px; padding: 10px; text-align: center;}
 .banner__image__autorizzazioni {width: 150px; margin: 10px; display: inline-block;}
+.banner__image__certificazioni {margin: 10px; display: inline-block;}
 .banner__testo__centrato {height:100px; width: 300px; margin: 10px 10px;}
 
 /*FOOTER*/
