--- a/stile.css
+++ b/stile.css
@@ -9,7 +9,20 @@ a {text-decoration: none;}
   -webkit-transition: all 0.3s ease-out;
           transition: all 0.3s ease-out;
             align-items: center;}
-.button {display: inline-block; background: #fff; color: #000; padding: 15px 30px; border-radius: 3px; text-decoration: none;}
+.button {
+    display: inline-block;
+    background-color: #000186;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 p {line-height: 22px;}
 a {color: #16dd94;}
 a:hover {color: #1af3a4;}
